Adding user signal branch

--- a/reserve_kvm/reserve_chameleon.ipynb
+++ b/reserve_kvm/reserve_chameleon.ipynb
@@ -524,8 +524,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Clone the gourmetgram repository\n",
-    "remote.run(\"git clone -b feedback_loop_integration https://github.com/ShaktidharK1997/gourmetgram.git\")"
+    "# Clone the gourmetgram repository with feedback_loop_integration branch if using labelling setup\n",
+    "remote.run(\"git clone -b feedback_loop_integration https://github.com/ShaktidharK1997/gourmetgram.git\")\n",
+    "\n",
+    "# Clone the gourmetgram repository with user_proxy_signal branch if using user signal setup\n",
+    "# remote.run(\"git clone -b user_proxy_signal https://github.com/ShaktidharK1997/gourmetgram.git\")\n"
    ]
   },
   {
@@ -583,6 +586,23 @@
    "source": [
     "# Use docker to setup the scheduler\n",
     "remote.run(\"cd gourmetgram; docker-compose up -d scheduler\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you want to run gourmetgram application using a user proxy signal instead of a labelling setup, proceed with the next steps instead"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use docker to setup \n",
+    "remote.run(\"cd gourmetgram; docker-compose up --build\")"
    ]
   }
  ],
