small change in pynb

--- a/reserve_kvm/reserve_chameleon.ipynb
+++ b/reserve_kvm/reserve_chameleon.ipynb
@@ -575,7 +575,7 @@
    "outputs": [],
    "source": [
     "# Use docker to setup the Flask Application\n",
-    "remote.run(\"cd gourmetgram; docker-compose up -d flask-app\")"
+    "remote.run(\"cd gourmetgram; docker-compose up flask-app\")"
    ]
   },
   {
