--- a/reserve_kvm/reserve_chameleon.ipynb
+++ b/reserve_kvm/reserve_chameleon.ipynb
@@ -592,7 +592,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you want to run gourmetgram application using a user proxy signal instead of a labelling setup, proceed with the next steps instead"
+    "If you want to run gourmetgram application and gather output label from user, proceed with the next steps instead"
    ]
   },
   {
