Updates for feedback loop

--- a/reserve_kvm/reserve_chameleon.ipynb
+++ b/reserve_kvm/reserve_chameleon.ipynb
@@ -524,19 +524,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Clone the gourmetgram repository with feedback_loop_integration branch if using labelling setup\n",
-    "remote.run(\"git clone -b feedback_loop_integration https://github.com/ShaktidharK1997/gourmetgram.git\")\n",
-    "\n",
-    "# Clone the gourmetgram repository with user_proxy_signal branch if using user signal setup\n",
-    "# remote.run(\"git clone -b user_proxy_signal https://github.com/ShaktidharK1997/gourmetgram.git\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# install docker compose \n",
     "# Download the docker compose plugin\n",
     "remote.run(\"sudo curl -L https://github.com/docker/compose/releases/download/v2.24.5/docker-compose-linux-x86_64 -o /usr/local/bin/docker-compose\")\n",
@@ -552,6 +539,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We have talked about feedback loops. Lets try and setup a very basic one where the user gives feedback on the correct food class of the image."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Clone the gourmetgram repository with user_corrected branch \n",
+    "remote.run(\"git clone -b user_corrected https://github.com/ShaktidharK1997/gourmetgram.git\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "!NOTE : Once Docker-compose is set up, please take the env file that has been shared with you and copy it into the gourmetgram repository. This is important for the application to work correctly."
    ]
   },
@@ -561,38 +565,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use docker to setup the minio object store and the label studio\n",
-    "remote.run(\"cd gourmetgram; docker-compose up -d label-studio minio\")\n",
-    "\n",
-    "# Wait 15 seconds for Label Studio to get ready..\n",
-    "remote.run(\"sleep 15\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Use docker to setup the Flask Application\n",
-    "remote.run(\"cd gourmetgram; docker-compose up flask-app\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Use docker to setup the scheduler\n",
-    "remote.run(\"cd gourmetgram; docker-compose up -d scheduler\")"
+    "# Use docker to setup the Flask application\n",
+    "remote.run(\"cd gourmetgram; docker-compose up -d --build\")\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you want to run gourmetgram application and gather output label from user, proceed with the next steps instead"
+    "Please look at the README file to understand more about it"
    ]
   },
   {
@@ -601,8 +582,75 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use docker to setup \n",
-    "remote.run(\"cd gourmetgram; docker-compose up --build\")"
+    "# Command to shut down the application\n",
+    "remote.run(\"cd gourmetgram; docker-compose down -v\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "However, this approach of taking the user’s feedback is not optimal for many reasons:\n",
+    "\n",
+    "-   Users come to Gourmet Gram seeking food classification, not to provide expert labels. There’s a high probability they’ll misclassify images, and retraining with this feedback would significantly degrade model performance.\n",
+    "\n",
+    "-   User feedback in production ML systems introduces subtle biases. For example, in our Gourmet Gram UI, food classes are listed in a fixed order while providing feedback. This creates an implicit bias where options at the top of the menu catch users’ attention first and are selected more frequently, regardless of correctness.\n",
+    "\n",
+    "-   This phenomenon, called “degenerate feedback loops,” is widespread in recommendation systems. On Netflix, already-popular shows receive more prominent placement, leading to more views, which then reinforces their “popularity” in the algorithm. These loops don’t necessarily reflect quality or relevance to individual users, but rather amplify existing popularity patterns."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For this reason, companies use a Human in the Loop approach to improve their model performance. In this case, predictions which either have a low confidence or user disagrees with are sent to data annotators. These annotators have significant experience in the domain of the model and therefore can provide reliable labels for the tasks at hand. These high-quality labels are then used to retrain the model, leading to better performance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lets try and setting up a Human in the Loop approach for Gourmetgram! For this, we are using Label Studio which is an open source data labeling platform."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Clone the gourmetgram repository with feedback_loop_integration branch \n",
+    "remote.run(\"cd gourmetgram; git fetch origin feedback_loop_integration; git checkout feedback_loop_integration\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# lets bring the minio and label-studio containers first\n",
+    "remote.run(\"cd gourmetgram; docker-compose up minio label-studio -d\")\n",
+    "\n",
+    "# Wait 30 seconds for Label studio to get started ...\n",
+    "remote.run('sleep(30)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# lets bring the flask application now\n",
+    "remote.run(\"cd gourmetgram; docker-compose up flask-app --build\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Please look at the README file to understand more about it"
    ]
   }
  ],
