changes to document

--- a/reserve_kvm/reserve_chameleon.ipynb
+++ b/reserve_kvm/reserve_chameleon.ipynb
@@ -539,7 +539,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have talked about feedback loops. Lets try and setup a very basic one where the user gives feedback on the correct food class of the image."
+    "We have talked about feedback loops. Let’s start by exploring a basic feedback mechanism where users directly provide feedback on food classifications."
    ]
   },
   {
@@ -573,7 +573,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Please look at the README file to understand more about it"
+    "1.  Access the Web Interface:\n",
+    "\n",
+    "Open your browser and navigate to: http://localhost:8000 You’ll see the Gourmet Gram interface for uploading and classifying food images\n",
+    "\n",
+    "1.  Test the Classification System:\n",
+    "\n",
+    "Upload a food image using the interface The system will display its prediction You can either confirm the prediction is correct or select the correct class if it’s wrong\n",
+    "\n",
+    "1.  Explore the MinIO Storage:\n",
+    "\n",
+    "Navigate to http://localhost:9001 Login with the credentials username: minioadmin, password: minioadmin Explore the `production-images` bucket to see how images are organized by class Check the `tracking bucket` to view the JSON files that track user corrections\n",
+    "\n",
+    "1.  Generate a Test Suite:\n",
+    "\n",
+    "You can generate a test suite based on user corrections by running:\n",
+    "\n",
+    "``` bash\n",
+    "curl -X GET \"http://localhost:8000/generate_test_suite\"\n",
+    "```\n",
+    "\n",
+    "This will create a timestamped directory in the test-suites bucket containing corrected images"
    ]
   },
   {
@@ -650,7 +670,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Please look at the README file to understand more about it"
+    "1.  Access the Web Interface:\n",
+    "\n",
+    "Open your browser and navigate to: http://localhost:8000 Upload food images for classification\n",
+    "\n",
+    "1.  Provide Feedback:\n",
+    "\n",
+    "After seeing a prediction, you can give thumbs up (correct) or thumbs down (incorrect) Notice that unlike the first system, you don’t directly provide the correct class Images with low confidence or negative feedback are sent to Label Studio for expert review\n",
+    "\n",
+    "1.  Explore Label Studio (Annotation Interface):\n",
+    "\n",
+    "Navigate to http://localhost:8080 Login with username: gourmetgramuser@gmail.com, password: gourmetgrampassword) Select the “Food Classification Review” project Click on “Tasks” to see images waiting for expert review For each task, select the correct food category and submit your annotation\n",
+    "\n",
+    "1.  Create random sampling tasks\n",
+    "\n",
+    "``` bash\n",
+    "curl -X POST \"http://localhost:8000/sample_random_images\" -H \"Content-Type: application/json\" -d '{\"sample_count\": 5}'\n",
+    "```\n",
+    "\n",
+    "1.  Process Expert Annotations:\n",
+    "\n",
+    "After annotating some images in Label Studio, process these annotations:\n",
+    "\n",
+    "``` bash\n",
+    "curl -X POST \"http://localhost:8000/process_labels\"\n",
+    "```\n",
+    "\n",
+    "This will move images to their correct class directories based on expert annotations\n",
+    "\n",
+    "1.  Explore MinIO Storage:\n",
+    "\n",
+    "Navigate to http://localhost:9001 Examine the different buckets to see how data is organized:\n",
+    "\n",
+    "production-images: Contains all classified images tracking: Contains tracking JSONs for different feedback sources target-bucket: Where Label Studio exports annotations test-suites: Contains organized test suites for evaluation"
    ]
   }
  ],
