--- a/reserve_kvm/reserve_chameleon.ipynb
+++ b/reserve_kvm/reserve_chameleon.ipynb
@@ -539,6 +539,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## User Feedback Loop\n",
+    "\n",
     "We have talked about feedback loops. Let’s start by exploring a basic feedback mechanism where users directly provide feedback on food classifications."
    ]
   },
@@ -573,21 +575,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.  Access the Web Interface:\n",
+    "### Explore User Feedback System\n",
     "\n",
-    "Open your browser and navigate to: http://localhost:8000 You’ll see the Gourmet Gram interface for uploading and classifying food images\n",
+    "1.  Access the Web Interface: Open your browser and navigate to: http://localhost:8000 You’ll see the Gourmet Gram interface for uploading and classifying food images\n",
     "\n",
-    "1.  Test the Classification System:\n",
+    "2.  Test the Classification System: Upload a food image using the interface The system will display its prediction You can either confirm the prediction is correct or select the correct class if it’s wrong\n",
     "\n",
-    "Upload a food image using the interface The system will display its prediction You can either confirm the prediction is correct or select the correct class if it’s wrong\n",
+    "3.  Explore the MinIO Storage: Navigate to http://localhost:9001 Login with the credentials username: minioadmin, password: minioadmin Explore the `production-images` bucket to see how images are organized by class Check the `tracking bucket` to view the JSON files that track user corrections\n",
     "\n",
-    "1.  Explore the MinIO Storage:\n",
-    "\n",
-    "Navigate to http://localhost:9001 Login with the credentials username: minioadmin, password: minioadmin Explore the `production-images` bucket to see how images are organized by class Check the `tracking bucket` to view the JSON files that track user corrections\n",
-    "\n",
-    "1.  Generate a Test Suite:\n",
-    "\n",
-    "You can generate a test suite based on user corrections by running:\n",
+    "4.  Generate a Test Suite: You can generate a test suite based on user corrections by running:\n",
     "\n",
     "``` bash\n",
     "curl -X GET \"http://localhost:8000/generate_test_suite\"\n",
@@ -610,19 +606,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Disadvantages of User Feedback\n",
+    "\n",
     "However, this approach of taking the user’s feedback is not optimal for many reasons:\n",
     "\n",
     "-   Users come to Gourmet Gram seeking food classification, not to provide expert labels. There’s a high probability they’ll misclassify images, and retraining with this feedback would significantly degrade model performance.\n",
     "\n",
     "-   User feedback in production ML systems introduces subtle biases. For example, in our Gourmet Gram UI, food classes are listed in a fixed order while providing feedback. This creates an implicit bias where options at the top of the menu catch users’ attention first and are selected more frequently, regardless of correctness.\n",
     "\n",
-    "-   This phenomenon, called “degenerate feedback loops,” is widespread in recommendation systems. On Netflix, already-popular shows receive more prominent placement, leading to more views, which then reinforces their “popularity” in the algorithm. These loops don’t necessarily reflect quality or relevance to individual users, but rather amplify existing popularity patterns."
+    "-   This phenomenon, called “degenerate feedback loops” is widespread in recommendation systems. On Netflix, already-popular shows receive more prominent placement, leading to more views, which then reinforces their “popularity” in the algorithm. These loops don’t necessarily reflect quality or relevance to individual users, but rather amplify existing popularity patterns."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Human in the Loop Approach\n",
+    "\n",
     "For this reason, companies use a Human in the Loop approach to improve their model performance. In this case, predictions which either have a low confidence or user disagrees with are sent to data annotators. These annotators have significant experience in the domain of the model and therefore can provide reliable labels for the tasks at hand. These high-quality labels are then used to retrain the model, leading to better performance."
    ]
   },
@@ -630,7 +630,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lets try and setting up a Human in the Loop approach for Gourmetgram! For this, we are using Label Studio which is an open source data labeling platform."
+    "### Setting up Human in the Loop System\n",
+    "\n",
+    "Lets try and setting up a Human in the Loop approach for Gourmetgram! For this, we are using `Label Studio` which is an open source data labeling platform.\n",
+    "\n",
+    "https://labelstud.io/"
    ]
   },
   {
@@ -639,7 +643,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Clone the gourmetgram repository with feedback_loop_integration branch \n",
+    "# Lets fetch and checkout to feedback_loop_integration branch\n",
     "remote.run(\"cd gourmetgram; git fetch origin feedback_loop_integration; git checkout feedback_loop_integration\")"
    ]
   },
@@ -650,7 +654,7 @@
    "outputs": [],
    "source": [
     "# lets bring the minio and label-studio containers first\n",
-    "remote.run(\"cd gourmetgram; docker-compose up minio label-studio -d\")\n",
+    "remote.run(\"cd gourmetgram; docker-compose up -d minio label-studio\")\n",
     "\n",
     "# Wait 30 seconds for Label studio to get started ...\n",
     "remote.run('sleep(30)')"
@@ -670,27 +674,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.  Access the Web Interface:\n",
+    "### Explore Human in the Loop System\n",
     "\n",
-    "Open your browser and navigate to: http://localhost:8000 Upload food images for classification\n",
+    "1.  Access the Web Interface: Open your browser and navigate to: http://localhost:8000 Upload food images for classification\n",
     "\n",
-    "1.  Provide Feedback:\n",
+    "2.  Provide Feedback: After seeing a prediction, you can give thumbs up (correct) or thumbs down (incorrect) Notice that unlike the first system, you don’t directly provide the correct class Images with low confidence or negative feedback are sent to Label Studio for expert review\n",
     "\n",
-    "After seeing a prediction, you can give thumbs up (correct) or thumbs down (incorrect) Notice that unlike the first system, you don’t directly provide the correct class Images with low confidence or negative feedback are sent to Label Studio for expert review\n",
+    "3.  Explore Label Studio (Annotation Interface): Navigate to http://localhost:8080 Login with username: gourmetgramuser@gmail.com, password: gourmetgrampassword Select the “Food Classification Review” project Click on “Tasks” to see images waiting for expert review For each task, select the correct food category and submit your annotation\n",
     "\n",
-    "1.  Explore Label Studio (Annotation Interface):\n",
-    "\n",
-    "Navigate to http://localhost:8080 Login with username: gourmetgramuser@gmail.com, password: gourmetgrampassword) Select the “Food Classification Review” project Click on “Tasks” to see images waiting for expert review For each task, select the correct food category and submit your annotation\n",
-    "\n",
-    "1.  Create random sampling tasks\n",
+    "4.  Create random sampling tasks\n",
     "\n",
     "``` bash\n",
     "curl -X POST \"http://localhost:8000/sample_random_images\" -H \"Content-Type: application/json\" -d '{\"sample_count\": 5}'\n",
     "```\n",
     "\n",
-    "1.  Process Expert Annotations:\n",
-    "\n",
-    "After annotating some images in Label Studio, process these annotations:\n",
+    "1.  Process Expert Annotations: After annotating some images in Label Studio, process these annotations:\n",
     "\n",
     "``` bash\n",
     "curl -X POST \"http://localhost:8000/process_labels\"\n",
@@ -698,11 +696,12 @@
     "\n",
     "This will move images to their correct class directories based on expert annotations\n",
     "\n",
-    "1.  Explore MinIO Storage:\n",
+    "1.  Explore MinIO Storage: Navigate to http://localhost:9001 Examine the different buckets to see how data is organized:\n",
     "\n",
-    "Navigate to http://localhost:9001 Examine the different buckets to see how data is organized:\n",
-    "\n",
-    "production-images: Contains all classified images tracking: Contains tracking JSONs for different feedback sources target-bucket: Where Label Studio exports annotations test-suites: Contains organized test suites for evaluation"
+    "-   `production-images`: Contains all classified images\n",
+    "-   `tracking`: Contains tracking JSONs for different feedback sources\n",
+    "-   `target-bucket`: Where Label Studio exports annotations\n",
+    "-   `test-suites`: Contains organized test suites for evaluation"
    ]
   }
  ],
