--- a/reserve_kvm/reserve_chameleon.ipynb
+++ b/reserve_kvm/reserve_chameleon.ipynb
@@ -583,11 +583,7 @@
     "\n",
     "3.  Explore the MinIO Storage: Navigate to http://localhost:9001 Login with the credentials username: minioadmin, password: minioadmin Explore the `production-images` bucket to see how images are organized by class Check the `tracking bucket` to view the JSON files that track user corrections\n",
     "\n",
-    "4.  Generate a Test Suite: You can generate a test suite based on user corrections by running:\n",
-    "\n",
-    "``` bash\n",
-    "curl -X GET \"http://localhost:8000/generate_test_suite\"\n",
-    "```\n",
+    "4.  Generate a Test Suite: You can generate a test suite based on user corrections by running: `bash     curl -X GET \"http://localhost:8000/generate_test_suite\"`\n",
     "\n",
     "This will create a timestamped directory in the test-suites bucket containing corrected images"
    ]
@@ -682,26 +678,28 @@
     "\n",
     "3.  Explore Label Studio (Annotation Interface): Navigate to http://localhost:8080 Login with username: gourmetgramuser@gmail.com, password: gourmetgrampassword Select the “Food Classification Review” project Click on “Tasks” to see images waiting for expert review For each task, select the correct food category and submit your annotation\n",
     "\n",
-    "4.  Create random sampling tasks\n",
+    "4.  Create random sampling tasks `bash     curl -X POST \"http://localhost:8000/sample_random_images\" -H \"Content-Type: application/json\" -d '{\"sample_count\": 5}'`\n",
     "\n",
-    "``` bash\n",
-    "curl -X POST \"http://localhost:8000/sample_random_images\" -H \"Content-Type: application/json\" -d '{\"sample_count\": 5}'\n",
-    "```\n",
+    "5.  Process Expert Annotations: After annotating some images in Label Studio, process these annotations: `bash     curl -X POST \"http://localhost:8000/process_labels\"` This will move images to their correct class directories\n",
     "\n",
-    "1.  Process Expert Annotations: After annotating some images in Label Studio, process these annotations:\n",
+    "6.  Create test suites: After processing the labels, create test cases based on task type (random sampling, low confidence or user feedback) `bash     curl -X GET http://localhost:8000/generate_test_suite?task_type=user_feedback     curl -X GET http://localhost:8000/generate_test_suite?task_type=low_confidence     curl -X GET http://localhost:8000/generate_test_suite?task_type=random_sampling     curl -X GET http://localhost:8000/generate_test_suite?task_type=all`\n",
     "\n",
-    "``` bash\n",
-    "curl -X POST \"http://localhost:8000/process_labels\"\n",
-    "```\n",
+    "7.  Explore MinIO contents: Navigate to http://localhost:9001 Examine the different buckets to see how data is organized:\n",
     "\n",
-    "This will move images to their correct class directories based on expert annotations\n",
-    "\n",
-    "1.  Explore MinIO Storage: Navigate to http://localhost:9001 Examine the different buckets to see how data is organized:\n",
-    "\n",
-    "-   `production-images`: Contains all classified images\n",
-    "-   `tracking`: Contains tracking JSONs for different feedback sources\n",
-    "-   `target-bucket`: Where Label Studio exports annotations\n",
-    "-   `test-suites`: Contains organized test suites for evaluation"
+    "    -   `production-images`: Contains all classified images\n",
+    "    -   `tracking`: Contains tracking JSONs for different feedback sources\n",
+    "    -   `target-bucket`: Where Label Studio exports annotations\n",
+    "    -   `test-suites`: Contains organized test suites for evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Command to shut down the application\n",
+    "remote.run(\"cd gourmetgram; docker-compose down -v\")"
    ]
   }
  ],
