--- a/reserve_kvm/reserve_chameleon.ipynb
+++ b/reserve_kvm/reserve_chameleon.ipynb
@@ -577,15 +577,26 @@
    "source": [
     "### Explore User Feedback System\n",
     "\n",
-    "1.  Access the Web Interface: Open your browser and navigate to: http://localhost:8000 You’ll see the Gourmet Gram interface for uploading and classifying food images\n",
+    "1.  Access the Web Interface:\n",
+    "    -   Open your browser and navigate to: http://localhost:8000\n",
+    "    -   You’ll see the Gourmet Gram interface for uploading and classifying food images\n",
+    "2.  Test the Classification System:\n",
+    "    -   Upload a food image using the interface\n",
+    "    -   The system will display its prediction\n",
+    "    -   You can either confirm the prediction is correct or select the correct class if it’s wrong\n",
+    "3.  Explore the MinIO Storage:\n",
+    "    -   Navigate to http://localhost:9001\n",
+    "    -   Login with the credentials username: minioadmin, password: minioadmin\n",
+    "    -   Explore the `production-images` bucket to see how images are organized by class\n",
+    "    -   Check the `tracking bucket` to view the JSON files that track user corrections\n",
+    "4.  Generate a Test Suite:\n",
+    "    -   You can generate a test suite based on user corrections by running:\n",
     "\n",
-    "2.  Test the Classification System: Upload a food image using the interface The system will display its prediction You can either confirm the prediction is correct or select the correct class if it’s wrong\n",
+    "    ``` bash\n",
+    "    curl -X GET \"http://localhost:8000/generate_test_suite\"\n",
+    "    ```\n",
     "\n",
-    "3.  Explore the MinIO Storage: Navigate to http://localhost:9001 Login with the credentials username: minioadmin, password: minioadmin Explore the `production-images` bucket to see how images are organized by class Check the `tracking bucket` to view the JSON files that track user corrections\n",
-    "\n",
-    "4.  Generate a Test Suite: You can generate a test suite based on user corrections by running: `bash     curl -X GET \"http://localhost:8000/generate_test_suite\"`\n",
-    "\n",
-    "This will create a timestamped directory in the test-suites bucket containing corrected images"
+    "    -   This will create a timestamped directory in the test-suites bucket containing corrected images"
    ]
   },
   {
@@ -672,24 +683,44 @@
    "source": [
     "### Explore Human in the Loop System\n",
     "\n",
-    "1.  Access the Web Interface: Open your browser and navigate to: http://localhost:8000 Upload food images for classification\n",
-    "\n",
-    "2.  Provide Feedback: After seeing a prediction, you can give thumbs up (correct) or thumbs down (incorrect) Notice that unlike the first system, you don’t directly provide the correct class Images with low confidence or negative feedback are sent to Label Studio for expert review\n",
-    "\n",
-    "3.  Explore Label Studio (Annotation Interface): Navigate to http://localhost:8080 Login with username: gourmetgramuser@gmail.com, password: gourmetgrampassword Select the “Food Classification Review” project Click on “Tasks” to see images waiting for expert review For each task, select the correct food category and submit your annotation\n",
-    "\n",
+    "1.  Access the Web Interface:\n",
+    "    -   Open your browser and navigate to: http://localhost:8000\n",
+    "    -   Upload food images for classification\n",
+    "2.  Provide Feedback:\n",
+    "    -   After seeing a prediction, you can give thumbs up (correct) or thumbs down (incorrect)\n",
+    "    -   Notice that unlike the first system, you don’t directly provide the correct class\n",
+    "    -   Images with low confidence or negative feedback are sent to Label Studio for expert review\n",
+    "3.  Explore Label Studio (Annotation Interface):\n",
+    "    -   Navigate to http://localhost:8080\n",
+    "    -   Login with username: gourmetgramuser@gmail.com, password: gourmetgrampassword\n",
+    "    -   Select the “Food Classification Review” project\n",
+    "    -   Click on “Tasks” to see images waiting for expert review\n",
+    "    -   For each task, select the correct food category and submit your annotation\n",
     "4.  Create random sampling tasks `bash     curl -X POST \"http://localhost:8000/sample_random_images\" -H \"Content-Type: application/json\" -d '{\"sample_count\": 5}'`\n",
+    "5.  Process Expert Annotations:\n",
+    "    -   After annotating some images in Label Studio, process these annotations:\n",
     "\n",
-    "5.  Process Expert Annotations: After annotating some images in Label Studio, process these annotations: `bash     curl -X POST \"http://localhost:8000/process_labels\"` This will move images to their correct class directories\n",
+    "    ``` bash\n",
+    "    curl -X POST \"http://localhost:8000/process_labels\"\n",
+    "    ```\n",
     "\n",
-    "6.  Create test suites: After processing the labels, create test cases based on task type (random sampling, low confidence or user feedback) `bash     curl -X GET http://localhost:8000/generate_test_suite?task_type=user_feedback     curl -X GET http://localhost:8000/generate_test_suite?task_type=low_confidence     curl -X GET http://localhost:8000/generate_test_suite?task_type=random_sampling     curl -X GET http://localhost:8000/generate_test_suite?task_type=all`\n",
+    "    This will move images to their correct class directories\n",
+    "6.  Create test suites:\n",
+    "    -   After processing the labels, create test cases based on task type (random sampling, low confidence or user feedback)\n",
     "\n",
-    "7.  Explore MinIO contents: Navigate to http://localhost:9001 Examine the different buckets to see how data is organized:\n",
-    "\n",
-    "    -   `production-images`: Contains all classified images\n",
-    "    -   `tracking`: Contains tracking JSONs for different feedback sources\n",
-    "    -   `target-bucket`: Where Label Studio exports annotations\n",
-    "    -   `test-suites`: Contains organized test suites for evaluation"
+    "    ``` bash\n",
+    "    curl -X GET http://localhost:8000/generate_test_suite?task_type=user_feedback\n",
+    "    curl -X GET http://localhost:8000/generate_test_suite?task_type=low_confidence\n",
+    "    curl -X GET http://localhost:8000/generate_test_suite?task_type=random_sampling\n",
+    "    curl -X GET http://localhost:8000/generate_test_suite?task_type=all\n",
+    "    ```\n",
+    "7.  Explore MinIO contents:\n",
+    "    -   Navigate to http://localhost:9001\n",
+    "    -   Examine the different buckets to see how data is organized:\n",
+    "        -   `production-images`: Contains all classified images\n",
+    "        -   `tracking`: Contains tracking JSONs for different feedback sources\n",
+    "        -   `target-bucket`: Where Label Studio exports annotations\n",
+    "        -   `test-suites`: Contains organized test suites for evaluation"
    ]
   },
   {
