--- a/reserve_kvm/reserve_chameleon.ipynb
+++ b/reserve_kvm/reserve_chameleon.ipynb
@@ -317,6 +317,10 @@
     "    remote.run(f\"sudo firewall-cmd --zone=trusted --add-source=172.16.0.0/12 --permanent\")\n",
     "    remote.run(f\"sudo firewall-cmd --zone=trusted --add-source=10.0.0.0/8 --permanent\")\n",
     "    remote.run(f\"sudo firewall-cmd --zone=trusted --add-source=127.0.0.0/8 --permanent\")\n",
+    "    # add container ports\n",
+    "    remote.run(f\"sudo firewall-cmd --zone=public --add-port=8080/tcp --permanent\")\n",
+    "    remote.run(f\"sudo firewall-cmd --zone=public --add-port=8000/tcp --permanent\")\n",
+    "    remote.run(f\"sudo firewall-cmd --zone=public --add-port=9001/tcp--permanent\")\n",
     "    time.sleep(3)"
    ]
   },
@@ -372,13 +376,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# we also need to enable incoming traffic on the HTTP port\n",
-    "if not os_conn.get_security_group(\"Allow HTTP 8088\"):\n",
-    "    os_conn.create_security_group(\"Allow HTTP 8088\", \"Enable HTTP traffic on TCP port 8088\")\n",
-    "    os_conn.create_security_group_rule(\"Allow HTTP 8088\", port_range_min=8088, port_range_max=8088, protocol='tcp', remote_ip_prefix='0.0.0.0/0')\n",
+    "# we also need to enable incoming traffic on the HTTP port 8080\n",
+    "if not os_conn.get_security_group(\"Allow HTTP 8080\"):\n",
+    "    os_conn.create_security_group(\"Allow HTTP 8080\", \"Enable HTTP traffic on TCP port 8080\")\n",
+    "    os_conn.create_security_group_rule(\"Allow HTTP 8080\", port_range_min=8080, port_range_max=8080, protocol='tcp', remote_ip_prefix='0.0.0.0/0')\n",
     "\n",
     "# add existing security group\n",
-    "security_group_id = os_conn.get_security_group(\"Allow HTTP 8088\").id\n",
+    "security_group_id = os_conn.get_security_group(\"Allow HTTP 8080\").id\n",
+    "for port in chi.network.list_ports(): \n",
+    "    if port['port_security_enabled'] and port['network_id']==public_net.get(\"id\"):\n",
+    "        pri_security_groups = port['security_groups']\n",
+    "        pri_security_groups.append(security_group_id)\n",
+    "        os_conn.network.update_port(port['id'], security_groups=pri_security_groups)\n",
+    "\n",
+    "# we also need to enable incoming traffic on the HTTP port 8000\n",
+    "if not os_conn.get_security_group(\"Allow HTTP 8000\"):\n",
+    "    os_conn.create_security_group(\"Allow HTTP 8000\", \"Enable HTTP traffic on TCP port 8000\")\n",
+    "    os_conn.create_security_group_rule(\"Allow HTTP 8000\", port_range_min=8000, port_range_max=8000, protocol='tcp', remote_ip_prefix='0.0.0.0/0')\n",
+    "\n",
+    "# add existing security group\n",
+    "security_group_id = os_conn.get_security_group(\"Allow HTTP 8000\").id\n",
+    "for port in chi.network.list_ports(): \n",
+    "    if port['port_security_enabled'] and port['network_id']==public_net.get(\"id\"):\n",
+    "        pri_security_groups = port['security_groups']\n",
+    "        pri_security_groups.append(security_group_id)\n",
+    "        os_conn.network.update_port(port['id'], security_groups=pri_security_groups)\n",
+    "\n",
+    "# we also need to enable incoming traffic on the HTTP port 9001\n",
+    "if not os_conn.get_security_group(\"Allow HTTP 9001\"):\n",
+    "    os_conn.create_security_group(\"Allow HTTP 9001\", \"Enable HTTP traffic on TCP port 9001\")\n",
+    "    os_conn.create_security_group_rule(\"Allow HTTP 9001\", port_range_min=9001, port_range_max=9001, protocol='tcp', remote_ip_prefix='0.0.0.0/0')\n",
+    "\n",
+    "# add existing security group\n",
+    "security_group_id = os_conn.get_security_group(\"Allow HTTP 9001\").id\n",
     "for port in chi.network.list_ports(): \n",
     "    if port['port_security_enabled'] and port['network_id']==public_net.get(\"id\"):\n",
     "        pri_security_groups = port['security_groups']\n",
