--- a/reserve_kvm/reserve_chameleon.ipynb
+++ b/reserve_kvm/reserve_chameleon.ipynb
@@ -569,7 +569,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## User Feedback Loop\n",
+    "## Human in the Loop Approach\n",
+    "\n",
+    "### User Feedback Loop\n",
     "\n",
     "We have talked about feedback loops. Let’s start by exploring a basic feedback mechanism where users directly provide feedback on food classifications."
    ]
@@ -605,7 +607,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Explore User Feedback System\n",
+    "#### User Feedback System\n",
     "\n",
     "1.  Access the Web Interface:\n",
     "    -   Open your browser and navigate to: http://localhost:8000\n",
@@ -643,7 +645,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Disadvantages of User Feedback\n",
+    "#### Disadvantages of User Feedback\n",
     "\n",
     "However, this approach of taking the user’s feedback is not optimal for many reasons:\n",
     "\n",
@@ -658,18 +660,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Human in the Loop Approach\n",
+    "### Data Annotators Approach\n",
     "\n",
-    "For this reason, companies use a Human in the Loop approach to improve their model performance. In this case, predictions which either have a low confidence or user disagrees with are sent to data annotators. These annotators have significant experience in the domain of the model and therefore can provide reliable labels for the tasks at hand. These high-quality labels are then used to retrain the model, leading to better performance."
+    "For this reason, companies use data dnnotators to improve their model performance. In this case, predictions which either have a low confidence or user disagrees with are sent to data annotators. These annotators have significant experience in the domain of the model and therefore can provide reliable labels for the tasks at hand. These high-quality labels are then used to retrain the model, leading to better performance."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Setting up Human in the Loop System\n",
+    "### Setting up Data Annotator System\n",
     "\n",
-    "Lets try and setting up a Human in the Loop approach for Gourmetgram! For this, we are using `Label Studio` which is an open source data labeling platform.\n",
+    "Lets try and setting up a Data Annotator approach for Gourmetgram! For this, we are using `Label Studio` which is an open source data labeling platform.\n",
     "\n",
     "https://labelstud.io/"
    ]
@@ -711,7 +713,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Explore Human in the Loop System\n",
+    "### Label Studio System\n",
     "\n",
     "1.  Access the Web Interface:\n",
     "    -   Open your browser and navigate to: http://localhost:8000\n",
