--- a/reserve_kvm/reserve_chameleon.ipynb
+++ b/reserve_kvm/reserve_chameleon.ipynb
@@ -728,7 +728,7 @@
     "    -   Select the “Food Classification Review” project\n",
     "    -   Click on “Tasks” to see images waiting for expert review\n",
     "    -   For each task, select the correct food category and submit your annotation\n",
-    "4.  Create random sampling tasks `bash     curl -X POST \"http://localhost:8000/sample_random_images\" -H \"Content-Type: application/json\" -d '{\"sample_count\": 5}'`\n",
+    "4.  Create random sampling tasks ```bash     curl -X POST \"http://localhost:8000/sample_random_images\" -H \"Content-Type: application/json\" -d '{\"sample_count\": 5}'```\n",
     "5.  Process Expert Annotations:\n",
     "    -   After annotating some images in Label Studio, process these annotations:\n",
     "\n",
